MessageBoard Issues, Git 44 to 50 done.

--- a/app/pages/main/events/event/event-schedule/popovers/team/team.html
+++ b/app/pages/main/events/event/event-schedule/popovers/team/team.html
@@ -1,4 +1,4 @@
-<ion-list [(ngModel)]="teamFilter"  radio-group   (ionChange)="setSelectedTeam(teamFilter)">
+<ion-list [(ngModel)]="teamFilter" #teamname radio-group>
 
     <ion-list-header>
         Teams 
@@ -7,7 +7,7 @@
 
     <ion-item *ngFor="let team of teams">
       <ion-label>{{team.TeamName}}</ion-label>
-      <ion-radio  value={{team.TeamName}}></ion-radio>
+      <ion-radio  value={{team.TeamId}} (click)="setSelectedTeam(team.TeamId,team.TeamName)"></ion-radio>
     </ion-item>
    
 </ion-list>
