--- a/app/pages/main/message-board/compose/reply/reply.html
+++ b/app/pages/main/message-board/compose/reply/reply.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar primary>
 
-        <ion-buttons start>
+        <ion-buttons end>
             <button (click)="dismiss()">
                 <span showWhen="ios">Cancel</span>
                 <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
@@ -10,7 +10,7 @@
 
         <ion-title>Reply Message</ion-title>
 
-        <ion-buttons end>
+        <ion-buttons start>
             <button (click)="compose()">
                 <span>Post</span>
                 <!--<ion-icon name="md-checkmark" showWhen="android,windows"></ion-icon>-->
@@ -21,11 +21,58 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-card class="message-card">
+        <ion-grid>
+            <ion-row class="message-header">
+                <ion-col width-30>
+                    <p>
+                        <small>
+                            <ion-icon name="md-calendar"></ion-icon>
+                        </small> {{getFormattedDate(OriginalMessage.MessageBoard.Created)}}
+                    </p>
+                </ion-col>
+                <ion-col width-30>
+                    <p>
+                        <small>
+                            <ion-icon name="ios-clock"></ion-icon>
+                        </small> {{convertToAmPm(OriginalMessage.MessageBoard.Created.substring(11,16))}}
+                    </p>
+                </ion-col>
+                <ion-col width-40 class="">
+                    <p>
+                        <small>
+                            <ion-icon name="md-basketball"></ion-icon>
+                        </small>
+                        <span>{{OriginalMessage.MessageBoard.TeamName}}</span>
+                    </p>
+                </ion-col>
+            </ion-row>
+            <ion-row class="message-title">
+                <ion-col width-85>
+                    <h1>{{OriginalMessage.MessageBoard.Subject}}</h1>
+                    <p class="message-info">
+                        <small>
+                            <ion-icon name="md-person"></ion-icon>
+                        </small>
+                        <span>{{OriginalMessage.MessageBoard.FirstName}} {{OriginalMessage.MessageBoard.LastName}}</span>
+                    </p>
+                    <div class="accent-bar"></div>
+                </ion-col>
+                <ion-col width-15>
+                    <img src="medal-shadow.png" class="A-3" alt="">
+                </ion-col>
+            </ion-row>
+            <ion-row class="message-body">
+                <ion-col>
+                    <p>{{OriginalMessage.MessageBoard.Message}}</p>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </ion-card>
     <ion-card>
         <ion-list>
             <ion-item>
-                <ion-label stacked>Message</ion-label>
+                <ion-label stacked>Comments</ion-label>
                 <ion-textarea  [(ngModel)]="message" rows="10"></ion-textarea>
             </ion-item>
 
