--- a/app/pages/main/events/event/game-details/game-details.html
+++ b/app/pages/main/events/event/game-details/game-details.html
@@ -45,16 +45,16 @@
                 </ion-col>
             </ion-row>
 
-            <ion-row class="has-button">
-                <button class="header-right" block small outline danger (click)="goToRecordStatsPage()">
+          <!--  <ion-row class="has-button">
+                <button class="header-right" *ngIf="showHideRecordStats()" block small outline danger (click)="goToRecordStatsPage()">
                     Record Stats
                 </button>
             </ion-row>
             <ion-row>
-                <button class="header-right" small block clear dark-6 (click)="goToRecordStatsPage()">
+                <button class="header-right"  *ngIf="showHideViewStats()" small block clear dark-6 (click)="goToRecordStatsPage()">
                     View Recorded Stats
                 </button>
-            </ion-row>
+            </ion-row>-->
 
         </ion-grid>
     </ion-card>
@@ -62,7 +62,7 @@
     <ion-list-header>Location</ion-list-header>
 
     <ion-card>
-        <div class="map">
+         <div id="map" style="width:100%;height:200px">
             <button><ion-icon name="navigate"></ion-icon></button>
         </div>
         <ion-list radio-group>
@@ -72,7 +72,7 @@
             </ion-item>
         </ion-list>
         <div padding-thin>
-            <button block small outline (click)="loadMap(facilityaddress)">
+            <button block small outline (click)="showDirection(facilityaddress)">
                 <ion-icon name="navigate"></ion-icon>
                 Get Direction
             </button>
