--- a/app/pages/main/message-board/compose/select-team/select-team.html
+++ b/app/pages/main/message-board/compose/select-team/select-team.html
@@ -1,6 +1,11 @@
 <ion-header>
     <ion-navbar primary>
-
+        <ion-buttons end>
+            <button (click)="dismiss()">
+                <span showWhen="ios">Cancel</span>
+                <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
+            </button>
+        </ion-buttons>
         <ion-title>Select Team</ion-title>
 
     </ion-navbar>
